--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,3 @@
-
-
-    
-    
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,19 +8,20 @@
 {% else %}
 <title>{{ site.title }}</title>
 {% endif %}
-<!-- <meta name="description" content="{{ site.description }}"> -->
-<!-- <meta name="author" content="Thomas Varnish"> -->
+
+<meta name="description" content="{{ site.description }}">
+<meta name="author" content="{{ site.author }}">
 
 <!-- SEO (OpenGraph and Twitter Cards) -->
-<!-- <meta name="keywords" content="thomas, varnish, personal, website, physics, physicist, astrophysics, astrophysicist, astronomy, student, imperial, college, space, maker, mit, massachusetts, plasma, puffin, herschel, nuclear, psfc"> -->
-<!-- <meta property="og:title" content="{% if page.title %}{{ page.title }} | {{site.title}}{% else %}{{ site.title }}{% endif %}"> -->
-<!-- <meta property="og:description" content="{{ site.description }}"> -->
-<!-- <meta property="og:type" content="{% if page.ogtype %}{{ page.ogtype }}{% else %}website{% endif %}"> -->
-<!-- <meta property="og:url" content="{% if page.ogurl %}{{ page.ogurl }}{% else %}https://www.thomasvarnish.co.uk/{% endif %}"> -->
-<!-- <meta property="og:image" content="{% if page.ogimage %}{{ page.ogimage }}{% else %}https://www.thomasvarnish.co.uk/assets/profile-square.jpg{% endif %}"> -->
+<meta name="keywords" content="{{ site.keywords }}">
+<meta property="og:title" content="{% if page.title %}{{ page.title }} | {{site.title}}{% else %}{{ site.title }}{% endif %}">
+<meta property="og:description" content="{{ site.description }}">
+<meta property="og:type" content="{% if page.ogtype %}{{ page.ogtype }}{% else %}website{% endif %}">
+<meta property="og:url" content="{% if page.ogurl %}{{ page.ogurl }}{% else %}{{ site.url }}{% endif %}">
+<meta property="og:image" content="{% if page.ogimage %}{{ page.ogimage }}{% else %}{{ site.ogimage }}{% endif %}">
 
-<!-- <meta name="twitter:card" content="summary"> -->
-<!-- <meta name="twitter:site" content="@{{ site.author.twitter }}"> -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:creator" content="{{ site.twitter }}">
 
 <!-- Favicon -->
 <!-- <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico"/> -->
@@ -33,11 +29,6 @@
 
 <!-- Font -->
 <link href="/assets/fontawesome/css/all.css" rel="stylesheet">
-<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,700" rel="stylesheet"> -->
-<!-- <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i&amp;subset=latin-ext" rel="stylesheet"> -->
-
-<!-- Mobile Drop-down Menu -->
-<!-- <link rel="stylesheet" href="/assets/css/mobile-menu.css"/> -->
 
 {% if page.enable_maths %}
 <!-- LaTeX Support (MathJax) -->
