Add posts for MAIZE, MR2022, and NSE Expo

--- a/_includes/image_with_caption.html
+++ b/_includes/image_with_caption.html
@@ -1,6 +1,6 @@
 
 <div class="image-block-container">
-    <img src="{{ include.src }}">
+    <img loading="lazy" src="{{ include.src }}">
     {% if include.caption %}
     <p>{{ include.caption }}</p>
     {% endif %}
