Improve vertical spacing (team page) and content width

--- a/_sass/team.scss
+++ b/_sass/team.scss
@@ -60,6 +60,12 @@
     display: none;
 }
 
+@media screen and (max-width: 1200px) {
+    .profile {
+        width: 95%;
+    }
+}
+
 @media screen and (max-width: 768px) { 
     .urop-names-student {
         line-height: 1.4em;
