--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -1,14 +1,21 @@
 .main-content {
     width: 40%;
     margin: auto;
-    max-width: 1000px;
-    min-width: 650px;
+    max-width: 1200px;
+    min-width: 800px;
 
     @media screen and (max-width: 768px) {
         width: 90%;
         margin: auto;
         min-width: 200px;
         max-width: 768px;
+    }
+
+    @media screen and (max-width: 1600px) {
+        width: 60%;
+        margin: auto;
+        max-width: 1300px;
+        min-width: 650px;
     }
 
     line-height: 2.8em;
