--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,7 @@
 
 <meta name="twitter:card" content="summary">
 <meta name="twitter:creator" content="{{ site.twitter }}">
+<meta property="twitter:image" content="{% if page.ogimage %}{{ page.ogimage }}{% else %}{{ site.ogimage }}{% endif %}">
 
 <!-- Favicon -->
 <!-- <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico"/> -->
